<resources>
    <string name="app_name">QScript</string>
    <string name="xposeddescription">QQ 脚本模块 by Tsihen</string>
    <string name="nothing">这里什么也没有 :(</string>
    <string name="n_a">N/A</string>
    <string name="internal_error">Internal error</string>
    <string name="module_version">模块版本</string>
    <string name="update_module_and_reboot">更新模块后需要重启手机方可生效</string>
    <string name="module_settings">模块设置</string>
    <string name="please_set_in_qq_or_tim">请在 QQ / TIM 内进行操作</string>
    <string name="how_to_set_module"><![CDATA[QQ侧滑 > 设置 > QScript 即可进入模块设置]]></string>
    <string name="not_support">暂不支持 轻聊版 / 国际版</string>
    <string name="qq">QQ</string>
    <string name="tim">TIM</string>
    <string name="debug_info">调试信息</string>
    <string name="change_theme">切换主题</string>
    <string name="about">关于</string>
    <string name="github">Github</string>
    <string name="tips">提示</string>
    <string name="about_me">作者：Tsihen&lt;br /&gt;QQ：3318448676&lt;br /&gt;E-Mail：3318448676@qq.com&lt;br /&gt;&lt;strong&gt;本模块无毒无害，开源地址：&lt;a href="https://github.com/GoldenHuaji/QScript"&gt;Github&lt;/a&gt;&lt;/strong&gt;</string>

    <string name="xposed_not_activated">Xposed 未激活</string>
    <string name="xposed_activated">Xposed 已激活</string>
    <string name="edxposed_not_activated">EdXposed 未激活</string>
    <string name="edxposed_activated">EdXposed 已激活</string>
    <string name="taichi_yin_not_activated">太极·阴 未激活</string>
    <string name="taichi_yin_activated">太极·阴 已激活</string>
    <string name="taichi_yang_not_activated">太极·阳 未激活</string>
    <string name="taichi_yang_activated">太极·阳 已激活</string>
    <string name="new_script">新建脚本…</string>
    <string name="help">帮助...</string>
    <string name="script_readonly">这个脚本是只读（ReadOnly）的，您不能编辑它（即使您编辑了，您的更改也不会保存）</string>
    <string name="reboot_qq_then_apply_script">温馨提示：您做的所有更改，都将在重启 QQ 后生效</string>
    <string name="derived_function">请对 %function% 求 %order% 阶导数（字母数字间乘号不能省略）。温馨提示：如果您确定您的计算结果无误，但验证失败，请尝试再次点击“确认”按钮，因为程序的算法有很小的概率导致分母为0或者sqrt(-n)。题目有误？请重新生成题目</string>
    <string name="input_result_here">求导结果输入在此处</string>
    <string name="change_exam">更换题目</string>
    <string name="apply">确认</string>
    <string name="especial_thanks">特别鸣谢</string>
    <string name="edit_data">仅供调试 - 编辑数据文件</string>
    <string name="open_source_license">开放源代码许可</string>
    <string name="click_to_check_update">点击检查更新（github.com）</string>
</resources>