<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_trans_border_ripple"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start|top"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingTop="18dp"
        android:paddingRight="0dp"
        android:paddingBottom="18dp">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/nothing"
            android:scaleType="fitXY"
            android:src="@drawable/ic_info"
            android:tint="@color/themeColor"
            tools:ignore="UseAppTint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="@string/module_version"
                android:textColor="@color/firstTextColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="@string/n_a"
                android:textColor="@color/secondTextColor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/update_module_and_reboot"
                android:textColor="@color/thirdTextColor"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>